k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zreal-web
  namespace: zreal
  labels:
    app: zreal
    component: web
spec:
  type: ClusterIP
  selector:
    app: zreal
    component: web
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
